--- a/telso001/index.html
+++ b/telso001/index.html
@@ -1,38 +1,56 @@
-
-<!doctype html>
-<html lang="en-US">
-  <head>
+<!DOCTYPE html>
+<!-- Microdata markup added by Google Structured Data Markup Helper. -->
+<html lang="en-US" class=" js no-touch"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <link rel="shortcut icon" href="images/favicon.png"/>
-    <title>Online Singing Audition | 2016</title>
-	<meta name="keywords" content="Online Audition, Singing Contest, Sing online, Audition">
-    <meta name="description" content="First online based singing contest WebUnplugged">
+    <link rel="shortcut icon" href="images/logo.png"/>
+    <title>Online Singing Audition | The Viral Voice | 2016</title>
 
-    <link rel='stylesheet' href='css/bootstrap.min.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/settings.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/widget-calendar-full.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/style.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/commerce.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/font-awesome.min.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/jquery.mb.YTPlayer.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/owl.carousel.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/owl.theme.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/nivo-lightbox.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/nivo-default.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/mediaelementplayer.css' type='text/css' media='all'/>
-    <link rel='stylesheet' href='css/layout.css' type='text/css' media='all'/>
+    <meta property="og:url" content="http://onlineaudition.xyz/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Online Singing Audition | The Viral Voice | 2016"/>
+    <meta property="og:description" content="The Viral Voice is fully online based singing contest. Participants needs to upload their audio clip after registration."/>
+    <meta property="og:image" content="http://onlineaudition.xyz/images/back.png"/>
 
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Dosis:100,300,400,700,900,300italic,400italic,700italic,900italic' type='text/css' media='all'/>
+    <meta name="keywords" content="Online Singing Contest, The Viral Voice, Online Audition, Singing Contest, Sing online, Audition"/>
+    <meta name="description" content="Register for Singing Audition The Viral Voice Season-I. We will announce the date soon"/>
+    <meta id="_description3" itemprop="description" content="The true satisfaction of a singer is it's ability to perform and entertain people. When talents and opportunities meet, the journey towards success and achievements begins. Here The Viral Voice Season-I, brings you a great opportunity to showcase your talent and show the world that you are the BEST. So why waste time. Pick your phones ,record a cool audio clip and upload.. Thats it..Get ready for the online registration. Registration fee Rs 100 only..Good luck and wish you all the best.">
+    <meta id="_url4" itemprop="url" content="http://www.onlineaudition.xyz/">
+    <meta itemprop="name" content="Online Singing Audition | The Viral Voice | 2016">
+
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/settings.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/widget-calendar-full.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/commerce.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/jquery.mb.YTPlayer.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/owl.theme.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/nivo-lightbox.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/nivo-default.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/mediaelementplayer.css" type="text/css" media="all"/>
+    <link rel="stylesheet" href="css/layout.css" type="text/css" media="all"/>
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Dosis:100,300,400,700,900,300italic,400italic,700italic,900italic" type="text/css" media="all"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+        <!-- [if lt IE 9]>
             <script src="js/html5shiv.min.js"></script>
             <script src="js/respond.min.js"></script>
         <![endif]-->
   </head>
   <body class="page-menu-transparent">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=121117958298617";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
     <!--preloader-->
         <div id="loading">
       <div id="loading-center">
@@ -59,19 +77,19 @@
               <div class="navbar-header">
                 <h1 class="sr-only">Home</h1>
                 <a href="./" class="navbar-brand">
-                  <img class="noo-logo-img noo-logo-normal" src="images/logo.png" alt="">
-                  <img class="noo-logo-img noo-logo-floating" src="images/logo.png" alt="">
+                  <img class="noo-logo-img noo-logo-normal" src="images/logo.png" alt="The Viral Vouce Logo"/>
+                  <img class="noo-logo-img noo-logo-floating" src="images/logo.png" alt="The Viral Vouce Logo"/>
                 </a>
               </div>  
               <nav class="collapse navbar-collapse noo-navbar-collapse">
-                <ul class="navbar-nav sf-menu">
+                <ul class="navbar-nav sf-menu sf-js-enabled sf-arrows">
                 </ul>
               </nav>  
             </div>  
           </div>  
         </div>
       </header>
-      <div class="container-wrap">
+      <div itemscope itemtype="http://schema.org/Event" class="container-wrap">
         <div class="main-content container-fullwidth">
           <div class="row row-fluid">
             <div class="nocontainer">
@@ -80,7 +98,6 @@
                   <ul class="full-background">
                     <li style="background-image: url('images/blog/blog2.jpg')"></li>
                     <li style="background-image: url('images/blog/blog7.jpg')"></li>
-                    <li style="background-image: url('images/blog/blog5.jpg')"></li>
                     <li style="background-image: url('images/blog/blog6.jpg')"></li>
                   </ul>
                   <div class="overlay_parallax"></div>
@@ -88,12 +105,12 @@
                     <div class="container">
                       <h2>INDIA'S FIRST ONLINE SINGING CONTEST IS READY NOW!</h2>
                       <p>We are ready to start and waiting for your performance.</p>
-                      <p>Audition will start from</p>
+                      <p>Audition dates will be declared soon</p>
                       <!-- <div id="defaultCountdown"></div> -->
-                      <div id="defaultCountdown" class="is-countdown">
+<!--                       <div id="defaultCountdown" class="is-countdown">
                         <span class="countdown-row countdown-show4">
                           <span class="countdown-section">
-                            <span class="countdown-amount">15th</span>
+                            <span class="countdown-amount">30th</span>
                             <span class="countdown-period">--</span>
                           </span>
                           <span class="countdown-section">
@@ -101,13 +118,14 @@
                             <span class="countdown-period">--</span>
                           </span>
                           <span class="countdown-section">
-                            <span class="countdown-amount">2016</span>
+                            <span class="countdown-amount">
+                              <meta itemprop="startDate" content="2016-06-30">2016</span>
                             <span class="countdown-period">--</span>
                           </span>
                         </span>
-                      </div>
+                      </div> -->
                       <div class="noo-countdown-footer register-now">
-                        <a href="#" data-text="discover now"><span>Discover</span></a>
+                        <a href="#" data-text="discover now"><span>Get in Touch</span></a>
                       </div>
                     </div>
                   </div>
@@ -127,8 +145,8 @@
                       About <span>Contest</span>
                     </h2>
                     <p class="sh-ds">
-                      We're organizing {{{$season_name}}} to encourage and offer a opportunity for young talented singers. This is fully online based contest. Participants can upload their audio clip after registration. Online registration will open from 15th April, 2016. Participants need to pay Rs.100 only as registration fee.
-                    </p>                    
+                      The true satisfaction of a singer is it's ability to perform and entertain people. When talents and opportunities meet, the journey towards success and achievements begins. Here <span itemprop="name">The Viral Voice Season-I</span>, brings you a great opportunity to showcase your talent and show the world that you are the BEST. So why waste time.Pick your phones ,record a cool audio clip and upload.. Thats it..Get ready for the online registration. Registration fee Rs 100 only..Good luck and wish you all the best. Keep in touch we'll update registration dates here.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -136,7 +154,7 @@
           </div>
         </div>
       </div>
-      <footer class="colophon site-info come-to-footer">
+      <footer itemscope itemtype="http://schema.org/Event" itemref="_description3 _url4" class="colophon site-info come-to-footer">
         <div class="colophon wigetized">
           <div class="background-footer"></div>
           <div class="container">
@@ -146,7 +164,7 @@
                   <h4 class="widget-title">Other <span>Details</span></h4>
                   <div class="textwidget">
                     <p>
-                      Please feel free to reach us for any type of queries. Like our facebook page for more updates.
+                      We'll annouce the registration dates soon. In the mean time you can give your number to us or just send an email to us, our team will inform you the dates once decided. Like our facebook page for more updates.
                     </p>
                     <p>
                       
@@ -156,24 +174,25 @@
               </div>  
               <div class="col-md-4 col-sm-6">
                 <div class="widget tribe-events-adv-list-widget">
-                  <h4 class="widget-title">Important <span>Dates</span></h4>
+                  <!-- <h4 class="widget-title">Important <span>Dates</span></h4>
                   <div class="tribe-mini-calendar-event">
                     <div class="list-date">
-                      <span class="list-dayname">--</span>
-                      <span class="list-daynumber">-</span>
+                      <span class="list-dayname">Mon</span>
+                      <span class="list-daynumber">30</span>
                     </div>
                     <div class="list-info">
                       <h2 class="entry-title summary">
                         Audition Start Date
                       </h2>
                       <div class="duration">
-                        <span class="date-start dtstart">Coming Soon</span>
-                       <!--  -
-                        <span class="date-end dtend">October 31-10:00 pm</span> -->
+                        <span class="date-start dtstart">
+                          <meta itemprop="startDate" content="2016-06-30">May, 2016</span>
+                        
+                         -<span class="date-end dtend">October 31-10:00 pm</span>
                       </div>
                     </div>  
-                  </div>
-                  <div class="tribe-mini-calendar-event">
+                  </div> -->
+<!--                   <div class="tribe-mini-calendar-event">
                     <div class="list-date">
                       <span class="list-dayname">--</span>
                       <span class="list-daynumber">-</span>
@@ -183,19 +202,19 @@
                         Audition End Date
                       </h2>
                       <div class="duration">
-                        <span class="date-start dtstart">Coming Soon</span>
+                        <span class="date-start dtstart">Coming Soon</span> -->
                         <!-- -
                         <span class="date-end dtend">October 31-10:30 pm</span> -->
-                      </div>
+<!--                       </div>
                     </div>  
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="col-md-4 col-sm-6">
                 <div class="widget mailchimp-widget">
-                  <h4 class="widget-title">Number <span>Please</span></h4>
+                  <h4 class="widget-title">Add <span>Reminder</span></h4>
                   <form class="mc-subscribe-form" onSubmit="return saveContact()">
-                    <label>Please mention your mobile number here. Our team will contact you. We'll not spam your inbox.</label>
+                    <label>Please mention your mobile number here. We'll remind you the audition dates. We'll not spam your inbox.</label>
                     <div class="input-mail">
                       <input type="text" name="mc_email" id="mobileNo" class="mc-email" value="" placeholder="Enter your number here..."/>
                       <span class="mobileError"></span>
@@ -210,19 +229,20 @@
               <div class="widget widget_noo_infomation">
                 <ul class="noo-infomation">
                   <li>
-                    <a href="http://fb.com">
+                    <a href="https://www.facebook.com/onlineaudition.xyz">
                       <span class="fa fa-facebook infomation-left"></span>
-                      <address>Follow us on facebook</address>
+                      <address>Visit our facebook page</address>
                     </a>
+                    <!-- <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="true" data-share="false"></div> -->
                   </li>
                   <li class="info-phone">
                     <span class="fa fa-whatsapp infomation-left"></span> OR
                     <span class="fa fa-phone infomation-left"></span>
-                    <span>+91 123 456 789</span>
+                    <span>+91 898 147 4462</span>
                   </li>
                   <li class="info-mail">
                     <span class="fa fa-envelope-o infomation-left"></span>
-                    <span><a href="mailto:admin@onlineaudition.xyz">admin@onlineaudition.xyz</a></span>
+                    <span><a href="mailto:query@onlineaudition.xyz">query@onlineaudition.xyz</a></span>
                   </li>
                 </ul>
               </div>
@@ -232,24 +252,24 @@
       </footer>  
     </div>
 
-    <script type='text/javascript' src='http://code.jquery.com/jquery-1.11.3.min.js'></script>
-    <script type='text/javascript' src='js/jquery-migrate.min.js'></script>
-    <script type='text/javascript' src='js/jquery.themepunch.tools.min.js'></script>
-    <script type='text/javascript' src='js/jquery.themepunch.revolution.min.js'></script>
-    <script type='text/javascript' src='js/modernizr-2.7.1.min.js'></script>
-    <script type='text/javascript' src='js/imagesloaded.pkgd.min.js'></script>
-    <script type='text/javascript' src='js/jquery.carouFredSel-6.2.1.js'></script>
-    <script type='text/javascript' src='js/jquery.touchSwipe.min.js'></script>
-    <script type='text/javascript' src='js/bootstrap.min.js'></script>
-    <script type='text/javascript' src='js/hoverIntent-r7.min.js'></script>
-    <script type='text/javascript' src='js/superfish-1.7.4.min.js'></script>
-    <script type='text/javascript' src='js/main.js'></script>
-    <script type='text/javascript' src='js/mediaelement-and-player.js'></script>
-    <script type='text/javascript' src='js/player.js'></script>
-    <script type='text/javascript' src='js/jquery.plugin.min.js'></script>
-    <script type='text/javascript' src='js/jquery.countdown.min.js'></script> 
-    <script type='text/javascript' src='js/jquery.parallax.js'></script>
-    <script type='text/javascript' src='js/owl.carousel.min.js'></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="js/jquery-migrate.min.js"></script>
+    <script type="text/javascript" src="js/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="js/modernizr-2.7.1.min.js"></script>
+    <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1.js"></script>
+    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/hoverIntent-r7.min.js"></script>
+    <script type="text/javascript" src="js/superfish-1.7.4.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/mediaelement-and-player.js"></script>
+    <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/jquery.plugin.min.js"></script>
+    <script type="text/javascript" src="js/jquery.countdown.min.js"></script> 
+    <script type="text/javascript" src="js/jquery.parallax.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
 
     <script type="text/javascript">
           var $height_w   = jQuery(window).height();
@@ -283,6 +303,16 @@
                 jQuery('.noo-countdown').css('height',$height_w+'px');
           });
             jQuery(function () {
+              $.ajax({
+                url: 'track.php',
+                type: 'POST',
+                data: {
+                  page: 'index'
+                },
+                success: function(res) {
+                  console.log(res);
+                }
+              });
               $('body').on('click', '.register-now', function() {
               $("html, body").animate({
                   scrollTop: $('.come-to-footer').outerHeight()
