--- a/telso001/index.html
+++ b/telso001/index.html
@@ -80,7 +80,26 @@
                   <img class="noo-logo-img noo-logo-normal" src="images/logo.png" alt="The Viral Vouce Logo"/>
                   <img class="noo-logo-img noo-logo-floating" src="images/logo.png" alt="The Viral Vouce Logo"/>
                 </a>
-              </div>  
+              </div>
+			  <nav class="collapse navbar-collapse noo-navbar-collapse">
+          <ul class="navbar-nav sf-menu sf-js-enabled sf-arrows">
+            <li class="current-menu-item">
+              <a href="http://www.onlineaudition.xyz">Home</a>
+            </li>
+            <li class="menu-item-has-children">
+              <a href="#">Singing Auditions</a>
+              <ul class="sub-menu">
+                <li><a href="the-viral-voice-online-audition-details">The Viral Voice</a></li>
+                <li><a href="sing-dil-se-audition">Sing Dil Se</a></li>
+                <li><a href="indian-idol-audition">Indian Idol</a></li>
+                <li><a href="indian-idol-junior-audition">Indian Idol Junior</a></li>
+                <li><a href="sa-re-ga-ma-pa-audition">Sa Re Ga Ma</a></li>
+                <li><a href="The-Voice-India-Online-Audition-Details">The Voice India</a></li>
+				<li><a href="magical-voice-of-india-audition">Magical Voice Of India</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
               <nav class="collapse navbar-collapse noo-navbar-collapse">
                 <ul class="navbar-nav sf-menu sf-js-enabled sf-arrows">
                 </ul>
