--- a/telso001/index.html
+++ b/telso001/index.html
@@ -71,17 +71,21 @@
         <!--end preloader-->
     <div class="site">
       <header class="noo-header" id="noo-header">
-        <div class="navbar-wrapper">
-          <div class="navbar navbar-default navbar-static-top">
-            <div class="container">
-              <div class="navbar-header">
-                <h1 class="sr-only">Home</h1>
-                <a href="./" class="navbar-brand">
-                  <img class="noo-logo-img noo-logo-normal" src="images/logo.png" alt="The Viral Vouce Logo"/>
-                  <img class="noo-logo-img noo-logo-floating" src="images/logo.png" alt="The Viral Vouce Logo"/>
-                </a>
-              </div>
-			  <nav class="collapse navbar-collapse noo-navbar-collapse">
+  <div class="navbar-wrapper">
+    <div class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <h1 class="sr-only">Home</h1>
+          <a class="navbar-toggle collapsed" data-toggle="collapse" data-target=".noo-navbar-collapse">
+            <span class="sr-only">Navigation</span>
+            <i class="fa fa-bars"></i>
+          </a>
+          <a href="./" class="navbar-brand">
+            <img class="noo-logo-img noo-logo-normal" src="images/logo.png" alt="The Viral Voice Logo"/>
+            <img class="noo-logo-img noo-logo-floating" src="images/logo.png" alt="The Viral Voice Logo"/>
+          </a>
+        </div>  
+        <nav class="collapse navbar-collapse noo-navbar-collapse">
           <ul class="navbar-nav sf-menu sf-js-enabled sf-arrows">
             <li class="current-menu-item">
               <a href="http://www.onlineaudition.xyz">Home</a>
@@ -89,25 +93,21 @@
             <li class="menu-item-has-children">
               <a href="#">Singing Auditions</a>
               <ul class="sub-menu">
-                <li><a href="the-viral-voice-online-audition-details">The Viral Voice</a></li>
-                <li><a href="sing-dil-se-audition">Sing Dil Se</a></li>
-                <li><a href="indian-idol-audition">Indian Idol</a></li>
-                <li><a href="indian-idol-junior-audition">Indian Idol Junior</a></li>
-                <li><a href="sa-re-ga-ma-pa-audition">Sa Re Ga Ma</a></li>
-                <li><a href="The-Voice-India-Online-Audition-Details">The Voice India</a></li>
-				<li><a href="magical-voice-of-india-audition">Magical Voice Of India</a></li>
+                <li><a href="the-viral-voice-online-audition-details" title="The Viral Voice Audition">The Viral Voice</a></li>
+                <li><a href="sing-dil-se-audition" title="Sing Dil Se Audition">Sing Dil Se</a></li>
+                <li><a href="indian-idol-audition" title="Indian Idol Audition">Indian Idol</a></li>
+                <li><a href="indian-idol-junior-audition" title="Indian Idol Junior Audition">Indian Idol Junior</a></li>
+                <li><a href="sa-re-ga-ma-pa-audition" title="Sa Re Ga Ma Audition">Sa Re Ga Ma</a></li>
+                <li><a href="The-Voice-India-Online-Audition-Details" title="The Voice India Audition">The Voice India</a></li>
+				<li><a href="magical-voice-of-india-audition" title="Magical Voice of India Audition">Magical Voice Of India</a></li>
               </ul>
             </li>
           </ul>
         </nav>
-              <nav class="collapse navbar-collapse noo-navbar-collapse">
-                <ul class="navbar-nav sf-menu sf-js-enabled sf-arrows">
-                </ul>
-              </nav>  
-            </div>  
-          </div>  
-        </div>
-      </header>
+      </div>  
+    </div>  
+  </div>
+</header>
       <div itemscope itemtype="http://schema.org/Event" class="container-wrap">
         <div class="main-content container-fullwidth">
           <div class="row row-fluid">
