added google ad

--- a/telso001/index.html
+++ b/telso001/index.html
@@ -171,6 +171,24 @@
               </div>
             </div>
           </div>
+
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12" align="center">
+                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                  <!-- website | placement -->
+                  <ins class="adsbygoogle"
+                       style="display:block"
+                       data-ad-client="ca-pub-1000778163898331"
+                       data-ad-slot="4419110406"
+                       data-ad-format="auto"></ins>
+                  <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                  </script>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
       <footer itemscope itemtype="http://schema.org/Event" itemref="_description3 _url4" class="colophon site-info come-to-footer">
